
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ppc_data {size_t ppc_model; size_t ppc_avm; size_t ppc_mode; size_t ppc_epp; int ppbus; int ppc_lock; int intr_cookie; scalar_t__ res_irq; int ppc_rthr; int ppc_wthr; scalar_t__ ppc_fifo; } ;
typedef int device_t ;


 struct ppc_data* DEVTOSOFTC (int ) ;
 int INTR_MPSAFE ;
 int INTR_TYPE_TTY ;
 int MTX_DEF ;
 scalar_t__ PPB_IS_EPP (size_t) ;
 int bus_setup_intr (int ,scalar_t__,int,int *,int ,struct ppc_data*,int *) ;
 int device_add_child (int ,char*,int) ;
 int device_get_nameunit (int ) ;
 int device_printf (int ,char*,int,...) ;
 int device_probe_and_attach (int ) ;
 int mtx_destroy (int *) ;
 int mtx_init (int *,int ,char*,int ) ;
 int * ppc_avms ;
 char** ppc_epp_protocol ;
 int * ppc_models ;
 int * ppc_modes ;
 int ppcintr ;

int
ppc_attach(device_t dev)
{
 struct ppc_data *ppc = DEVTOSOFTC(dev);
 int error;

 mtx_init(&ppc->ppc_lock, device_get_nameunit(dev), "ppc", MTX_DEF);

 device_printf(dev, "%s chipset (%s) in %s mode%s\n",
        ppc_models[ppc->ppc_model], ppc_avms[ppc->ppc_avm],
        ppc_modes[ppc->ppc_mode], (PPB_IS_EPP(ppc->ppc_mode)) ?
        ppc_epp_protocol[ppc->ppc_epp] : "");

 if (ppc->ppc_fifo)
  device_printf(dev, "FIFO with %d/%d/%d bytes threshold\n",
         ppc->ppc_fifo, ppc->ppc_wthr, ppc->ppc_rthr);

 if (ppc->res_irq) {

  error = bus_setup_intr(dev, ppc->res_irq, INTR_TYPE_TTY |
      INTR_MPSAFE, ((void*)0), ppcintr, ppc, &ppc->intr_cookie);
  if (error) {
   device_printf(dev,
       "failed to register interrupt handler: %d\n",
       error);
   mtx_destroy(&ppc->ppc_lock);
   return (error);
  }
 }


 ppc->ppbus = device_add_child(dev, "ppbus", -1);




 device_probe_and_attach(ppc->ppbus);

 return (0);
}
